--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -52,17 +52,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="senhaPref1.cs" />
     <Compile Include="telaInicial.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="telaInicial.Designer.cs">
       <DependentUpon>telaInicial.cs</DependentUpon>
     </Compile>
-    <Compile Include="senhaPref.cs">
+    <Compile Include="tela_INICIO.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include=".Designer.cs">
-      <DependentUpon>senhaPref.cs</DependentUpon>
+      <DependentUpon>tela_INICIO.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
@@ -70,8 +71,8 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="senhaPref.resx">
-      <DependentUpon>senhaPref.cs</DependentUpon>
+    <EmbeddedResource Include="tela_INICIO.resx">
+      <DependentUpon>tela_INICIO.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
