--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmErro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmErro.Designer.cs">
+      <DependentUpon>frmErro.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSucesso.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmErro.resx">
+      <DependentUpon>frmErro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSucesso.resx">
       <DependentUpon>frmSucesso.cs</DependentUpon>
