--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="TOTEM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TOTEM.Designer.cs">
+      <DependentUpon>TOTEM.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmErro.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +116,9 @@
     </Compile>
     <EmbeddedResource Include="telaInicial.resx">
       <DependentUpon>telaInicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TOTEM.resx">
+      <DependentUpon>TOTEM.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
