--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_telaSenhas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_telaSenhas.Designer.cs">
+      <DependentUpon>frm_telaSenhas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_gestaoSenha.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_gestaoSenha.resx">
       <DependentUpon>frm_gestaoSenha.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_telaSenhas.resx">
+      <DependentUpon>frm_telaSenhas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="tela_INICIO.resx">
       <DependentUpon>tela_INICIO.cs</DependentUpon>
