--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_controleSenhas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_controleSenhas.Designer.cs">
+      <DependentUpon>frm_controleSenhas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_telaSenhas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_ADM.resx">
       <DependentUpon>frm_ADM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_controleSenhas.resx">
+      <DependentUpon>frm_controleSenhas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_gestaoSenha.resx">
       <DependentUpon>frm_gestaoSenha.cs</DependentUpon>
