--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -37,6 +37,7 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,18 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_config.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_config.Designer.cs">
+      <DependentUpon>frm_config.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_telaLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_telaLogin.Designer.cs">
+      <DependentUpon>frm_telaLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_controleSenhas.cs">
       <SubType>Form</SubType>
@@ -77,6 +90,12 @@
     </Compile>
     <Compile Include="frm_ADM.Designer.cs">
       <DependentUpon>frm_ADM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_usuarios.Designer.cs">
+      <DependentUpon>frm_usuarios.cs</DependentUpon>
     </Compile>
     <Compile Include="TOTEM.cs">
       <SubType>Form</SubType>
@@ -114,6 +133,12 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frm_config.resx">
+      <DependentUpon>frm_config.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_telaLogin.resx">
+      <DependentUpon>frm_telaLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmErro.resx">
       <DependentUpon>frmErro.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,6 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_telaSenhas.resx">
       <DependentUpon>frm_telaSenhas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_usuarios.resx">
+      <DependentUpon>frm_usuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="tela_INICIO.resx">
       <DependentUpon>tela_INICIO.cs</DependentUpon>
