--- a/Projeto_RJ/Projeto_RJ.csproj
+++ b/Projeto_RJ/Projeto_RJ.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_modalCadastro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_modalCadastro.Designer.cs">
+      <DependentUpon>frm_modalCadastro.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_config.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_modalCadastro.resx">
+      <DependentUpon>frm_modalCadastro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_config.resx">
       <DependentUpon>frm_config.cs</DependentUpon>
